log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:277: error: cannot find symbol
    private void createYearlyDistanceChart(GraphData data) {
                                           ^
  symbol:   class GraphData
  location: class GraphActivity
C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:418: error: cannot find symbol
    private void createHourlyStepsChart(GraphData data) {
                                        ^
  symbol:   class GraphData
  location: class GraphActivity
C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:437: error: cannot find symbol
        Dataset todayDataset = null;
        ^
  symbol:   class Dataset
  location: class GraphActivity
C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:438: error: cannot find symbol
        Dataset averageDataset = null;
        ^
  symbol:   class Dataset
  location: class GraphActivity
C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:440: error: cannot find symbol
        for (Dataset dataset : data.getDatasets()) {
             ^
  symbol:   class Dataset
  location: class GraphActivity
C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:525: error: cannot find symbol
            CurrentValue current = data.getCurrent_value();
            ^
  symbol:   class CurrentValue
  location: class GraphActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/SRIKANTH/AndroidStudioProjects/Strip/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:277: error: cannot find symbol
      private void createYearlyDistanceChart(GraphData data) {
                                             ^
    symbol:   class GraphData
    location: class GraphActivity
  C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:418: error: cannot find symbol
      private void createHourlyStepsChart(GraphData data) {
                                          ^
    symbol:   class GraphData
    location: class GraphActivity
  C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:437: error: cannot find symbol
          Dataset todayDataset = null;
          ^
    symbol:   class Dataset
    location: class GraphActivity
  C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:438: error: cannot find symbol
          Dataset averageDataset = null;
          ^
    symbol:   class Dataset
    location: class GraphActivity
  C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:440: error: cannot find symbol
          for (Dataset dataset : data.getDatasets()) {
               ^
    symbol:   class Dataset
    location: class GraphActivity
  C:\Users\SRIKANTH\AndroidStudioProjects\Strip\app\src\main\java\com\example\strip\GraphActivity.java:525: error: cannot find symbol
              CurrentValue current = data.getCurrent_value();
              ^
    symbol:   class CurrentValue
    location: class GraphActivity
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 7s
18 actionable tasks: 1 executed, 17 up-to-date
